<resources>
    <string name="app_name">Nontonin</string>
    <string name="title_favorite">Module Favorite</string>
    <string name="film">Film</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Setting</string>
    <string name="openheimer">Openheimer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor tincidunt lacus vitae ultrices. Nunc a ultricies justo, a dictum nibh. Aenean euismod dolor augue, id accumsan turpis mollis vitae. Duis eros orci, laoreet ut lorem id, hendrerit tempor felis. Integer posuere dolor et turpis sollicitudin posuere. Nam pellentesque, lectus sit amet euismod faucibus, leo ante imperdiet lacus, ut auctor neque ipsum eu metus. Sed est metus, euismod molestie ligula vel, sollicitudin congue ex.</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="_8_9">8.9</string>
    <string name="_2023_07_22">2023-07-22</string>
    <string name="title_favoritefeature">Favorite</string>
    <string name="title_dynamicfavorite">favoriteDynamic</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title" translatable="false">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto" translatable="false">Automatic</string>
    <string name="dark_mode_on" translatable="false">Dark mode</string>
    <string name="dark_mode_off" translatable="false">Light mode</string>
    <string name="pref_key_language" translatable="false">language</string>
    <string name="change_language">Change Language</string>
    <string name="language">Language</string>
    <string name="error_page">error page</string>

</resources>