<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="wrap_content"
                android:layout_height="480dp"
                android:background="#82799D" />

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="630dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_poster"
                android:contentDescription="@string/openheimer" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:background="@drawable/background_rounded"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/tv_show"
                android:padding="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_bookmark_border_24" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:background="@drawable/background_rounded"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/openheimer"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/rating"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2023_07_22"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/_8_9"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="30dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"
                android:textAlignment="viewStart"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>